chore: Code cleanup and fixed VillagerWalkTowardsTaskMixin.