@@ -4,12 +4,8 @@ import com.gitsh01.libertyvillagers.LibertyVillagersClientInitializer;
 import com.gitsh01.libertyvillagers.LibertyVillagersMod;
 import com.gitsh01.libertyvillagers.LibertyVillagersServerInitializer;
 import com.mojang.brigadier.context.CommandContext;
-import com.mojang.brigadier.exceptions.CommandSyntaxException;
-import net.fabricmc.api.ClientModInitializer;
 import net.fabricmc.fabric.api.command.v2.CommandRegistrationCallback;
 import net.fabricmc.loader.api.FabricLoader;
-import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.gui.screen.ingame.BookScreen;
 import net.minecraft.entity.ai.brain.MemoryModuleType;
 import net.minecraft.entity.passive.CatEntity;
 import net.minecraft.entity.passive.CatVariant;
@@ -24,21 +20,15 @@ import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.server.world.ServerWorld;
 import net.minecraft.text.Text;
 import net.minecraft.util.registry.Registry;
-import net.minecraft.util.registry.RegistryEntry;
 import net.minecraft.util.registry.RegistryKey;
 import net.minecraft.village.VillagerProfession;
 import net.minecraft.world.poi.PointOfInterest;
 import net.minecraft.world.poi.PointOfInterestStorage;
 import net.minecraft.world.poi.PointOfInterestTypes;
 import org.apache.commons.lang3.tuple.MutablePair;
-import org.apache.logging.log4j.core.jmx.Server;
 
-import java.awt.*;
 import java.util.*;
-import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static com.gitsh01.libertyvillagers.LibertyVillagersMod.CONFIG;
 import static net.minecraft.server.command.CommandManager.literal;
@@ -81,7 +71,7 @@ public class VillagerStats {
         return oldVal;
     }
 
-    public static void processVillagerStats(CommandContext<ServerCommandSource> command) throws CommandSyntaxException {
+    public static void processVillagerStats(CommandContext<ServerCommandSource> command) {
         ServerCommandSource source = command.getSource();
         ServerPlayerEntity player = source.getPlayer();
         ServerWorld serverWorld = source.getWorld();
@@ -108,7 +98,7 @@ public class VillagerStats {
         if (LibertyVillagersMod.isClient()) {
             LibertyVillagersClientInitializer.openBookScreen(bookStack);
         } else {
-            if (!FabricLoader.getInstance().getModContainer("server_translations_api").isPresent()) {
+            if (FabricLoader.getInstance().getModContainer("server_translations_api").isEmpty()) {
                 player.sendMessage(Text.of("Server_translations_api is missing. VillagerStats does not work " +
                         "server-side without translations."));
                 return;
@@ -228,11 +218,9 @@ public class VillagerStats {
         }
 
         AtomicReference<String> professions = new AtomicReference<>("");
-        villagerProfessionMap.forEach((villagerProfession, professionInfo) -> {
-            professions.set(professions.get() +
-                    Text.translatable("text.LibertyVillagers.villagerStats.professionsCountFormat", villagerProfession,
-                            professionInfo.countVillagersWithProfession).getString() + "\n");
-        });
+        villagerProfessionMap.forEach((villagerProfession, professionInfo) -> professions.set(professions.get() +
+                Text.translatable("text.LibertyVillagers.villagerStats.professionsCountFormat", villagerProfession,
+                        professionInfo.countVillagersWithProfession).getString() + "\n"));
 
         pageString += professions.get() + "\n\n";
 
@@ -254,7 +242,7 @@ public class VillagerStats {
         AtomicReference<String> heldWorkstations = new AtomicReference<>("");
         villagerProfessionMap.forEach((villagerProfession, professionInfo) -> {
             long numOccupiedWorkstations = 0;
-            if (villagerProfession != "baby") {
+            if (!Objects.equals(villagerProfession, "baby")) {
                 numOccupiedWorkstations = serverWorld.getPointOfInterestStorage()
                         .count(professionInfo.profession.heldWorkstation(), player.getBlockPos(),
                                 CONFIG.debugConfig.villagerStatRange,
@@ -286,7 +274,7 @@ public class VillagerStats {
         AtomicReference<String> availableWorkstations = new AtomicReference<>("");
         villagerProfessionMap.forEach((villagerProfession, professionInfo) -> {
             long numAvailableWorkstations = 0;
-            if (villagerProfession != "baby") {
+            if (!Objects.equals(villagerProfession, "baby")) {
                 numAvailableWorkstations = serverWorld.getPointOfInterestStorage()
                         .count(professionInfo.profession.acquirableWorkstation(), player.getBlockPos(),
                                 CONFIG.debugConfig.villagerStatRange,
@@ -305,14 +293,14 @@ public class VillagerStats {
 
     protected static String homelessPage(ServerPlayerEntity player, List<VillagerEntity> villagers,
                                          ServerWorld serverWorld) {
-        String homelessString = "";
+        StringBuilder homelessString = new StringBuilder();
         int numHomeless = 0;
         for (VillagerEntity villager : villagers) {
             if (!villager.getBrain().hasMemoryModule(MemoryModuleType.HOME)) {
                 numHomeless++;
-                homelessString +=
+                homelessString.append(
                         Text.translatable("text.LibertyVillagers.villagerStats.homeless", villager.getDisplayName(),
-                                villager.getBlockPos().toShortString()).getString() + "\n";
+                                villager.getBlockPos().toShortString()).getString()).append("\n");
             }
         }
 
@@ -331,42 +319,43 @@ public class VillagerStats {
         List<PointOfInterest> availableBeds = serverWorld.getPointOfInterestStorage()
                 .getInCircle(registryEntry -> registryEntry.matchesKey(PointOfInterestTypes.HOME), player.getBlockPos(),
                         CONFIG.debugConfig.villagerStatRange, PointOfInterestStorage.OccupationStatus.HAS_SPACE)
-                .collect(Collectors.toList());
+                .toList();
 
-        String pageString = Text.translatable("text.LibertyVillagers.villagerStats.format",
+        StringBuilder pageString = new StringBuilder(Text.translatable("text.LibertyVillagers.villagerStats.format",
                 Text.translatable("text.LibertyVillagers.villagerStats.numberOfAvailableBeds").getString(),
-                availableBeds.size()).getString() + "\n\n";
+                availableBeds.size()).getString() + "\n\n");
 
         if (availableBeds.size() > 0) {
-            pageString += Text.translatable("text.LibertyVillagers.villagerStats.bedsAt").getString() + "\n";
+            pageString.append(Text.translatable("text.LibertyVillagers.villagerStats.bedsAt").getString()).append("\n");
             for (PointOfInterest bed : availableBeds) {
                 if (bed != null && bed.getPos() != null) {
-                    pageString += bed.getPos().toShortString() + "\n";
+                    pageString.append(bed.getPos().toShortString()).append("\n");
                 }
             }
         }
 
-        return pageString;
+        return pageString.toString();
     }
 
     protected static String golems(ServerPlayerEntity player, ServerWorld serverWorld) {
         List<IronGolemEntity> golems = serverWorld.getNonSpectatingEntities(IronGolemEntity.class,
                 player.getBoundingBox().expand(CONFIG.debugConfig.villagerStatRange));
 
-        String pageString = Text.translatable("text.LibertyVillagers.villagerStats.format",
+        StringBuilder pageString = new StringBuilder(Text.translatable("text.LibertyVillagers.villagerStats.format",
                         Text.translatable("text.LibertyVillagers.villagerStats.numberOfGolems").getString(), golems.size())
-                .getString() + "\n\n";
+                .getString() + "\n\n");
 
         if (golems.size() > 0) {
-            pageString += Text.translatable("text.LibertyVillagers.villagerStats.golemsAt").getString() + "\n";
+            pageString.append(Text.translatable("text.LibertyVillagers.villagerStats.golemsAt").getString())
+                    .append("\n");
             for (IronGolemEntity golem : golems) {
                 if (golem != null && golem.getBlockPos() != null) {
-                    pageString += golem.getBlockPos().toShortString() + "\n";
+                    pageString.append(golem.getBlockPos().toShortString()).append("\n");
                 }
             }
         }
 
-        return pageString;
+        return pageString.toString();
     }
 
 
@@ -393,11 +382,9 @@ public class VillagerStats {
             pageString += Text.translatable("text.LibertyVillagers.villagerStats.catTypes").getString() + "\n";
 
             AtomicReference<String> catVariants = new AtomicReference<>("");
-            catVariantMap.forEach((catVariant, sum) -> {
-                catVariants.set(catVariants.get() +
-                        Text.translatable("text.LibertyVillagers.villagerStats.professionsCountFormat",
-                                Text.translatable(catVariant).getString(), sum).getString() + "\n");
-            });
+            catVariantMap.forEach((catVariant, sum) -> catVariants.set(catVariants.get() +
+                    Text.translatable("text.LibertyVillagers.villagerStats.professionsCountFormat",
+                            Text.translatable(catVariant).getString(), sum).getString() + "\n"));
 
             pageString += catVariants;
         }
